testing in app-purchasing

--- a/daily-dose/Base.lproj/Main.storyboard
+++ b/daily-dose/Base.lproj/Main.storyboard
@@ -77,6 +77,9 @@
                                         <rect key="frame" x="134" y="60" width="112" height="34"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="REMOVE ADS"/>
+                                        <connections>
+                                            <action selector="removeAdsPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1ei-ZC-qlE"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.97680455450000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
